Fix full test definition

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,8 @@ extras = dev
 setenv =
     INTELMQ_TEST_EXOTIC=1
     INTELMQ_TEST_DATABASES=1
-    INTELMQ_SKIP_REDIS=0
+unsetenv =
+    INTELMQ_SKIP_REDIS
 commands = pytest {posargs}
 
 [testenv:full-with-docker]
