Add missing installation & correct cache key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .cache/pip
-          key: pip-cache-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+          key: pip-cache-${{ runner.os }}-${{ hashFiles('setup.py') }}
           restore-keys: |
             pip-cache-${{ runner.os }}-
 
