--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Build
         run: python -m build
 
+      - name: Upload dists
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        with:
+          name: release-dists
+          path: dist/
+
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
@@ -39,7 +45,14 @@ jobs:
       url: https://test.pypi.org/p/intelmq-extensions
     permissions:
       id-token: write
+
     steps:
+      - name: Retrieve release distributions
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
+        with:
+          name: release-dists
+          path: dist/
+
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
         with:
