Updated harmonization. First Modat queries

--- a/intelmq_extensions/etc/harmonization.conf
+++ b/intelmq_extensions/etc/harmonization.conf
@@ -1,5 +1,33 @@
 {
     "event": {
+        "destination_visible": {
+            "description": "If destination fields are visible. CERT.at-specific",
+            "type": "Boolean"
+        },
+        "notify": {
+            "description": "If mail will be sent out to affected or responsible contact. CERT.at-specific",
+            "type": "Boolean"
+        },
+        "rtir_incident_id": {
+            "description": "Request Tracker Incident Response incident id. CERT.at-specific",
+            "type": "Integer"
+        },
+        "rtir_investigation_id": {
+            "description": "Request Tracker Incident Response investigation id. CERT.at-specific",
+            "type": "Integer"
+        },
+        "rtir_report_id": {
+            "description": "Request Tracker Incident Response incident report id. CERT.at-specific",
+            "type": "Integer"
+        },
+        "sent_at": {
+            "description": "Time when the report has been sent to the responsible recipient. CERT.at-specific",
+            "type": "DateTime"
+        },
+        "shareable_extra_info": {
+            "description": "Fields from extra which can be shared. CERT.at-specific",
+            "type": "JSON"
+        },
         "classification.identifier": {
             "description": "The lowercase identifier defines the actual software or service (e.g. ``heartbleed`` or ``ntp_version``) or standardized malware name (e.g. ``zeus``). Note that you MAY overwrite this field during processing for your individual setup. This field is not standardized across IntelMQ setups/users.",
             "type": "String"
@@ -7,7 +35,7 @@
         "classification.taxonomy": {
             "description": "We recognize the need for the CSIRT teams to apply a static (incident) taxonomy to abuse data. With this goal in mind the type IOC will serve as a basis for this activity. Each value of the dynamic type mapping translates to a an element in the static taxonomy. The European CSIRT teams for example have decided to apply the eCSIRT.net incident classification. The value of the taxonomy key is thus a derivative of the dynamic type above. For more information about check `ENISA taxonomies <http://www.enisa.europa.eu/activities/cert/support/incident-management/browsable/incident-handling-process/incident-taxonomy/existing-taxonomies>`_.",
             "length": 100,
-            "type": "LowercaseString"
+            "type": "ClassificationTaxonomy"
         },
         "classification.type": {
             "description": "The abuse type IOC is one of the most crucial pieces of information for any given abuse event. The main idea of dynamic typing is to keep our ontology flexible, since we need to evolve with the evolving threatscape of abuse data. In contrast with the static taxonomy below, the dynamic typing is used to perform business decisions in the abuse handling pipeline. Furthermore, the value data set should be kept as minimal as possible to avoid *type explosion*, which in turn dilutes the business value of the dynamic typing. In general, we normally have two types of abuse type IOC: ones referring to a compromised resource or ones referring to pieces of the criminal infrastructure, such as a command and control servers for example.",
@@ -15,6 +43,10 @@
         },
         "comment": {
             "description": "Free text commentary about the abuse event inserted by an analyst.",
+            "type": "String"
+        },
+        "constituency": {
+            "description": "Internal identifier for multi-constituency setup",
             "type": "String"
         },
         "destination.abuse_contact": {
@@ -81,11 +113,11 @@
             "type": "IPAddress"
         },
         "destination.local_hostname": {
-            "description": "Some sources report a internal hostname within a NAT related to the name configured for a compromized system",
+            "description": "Some sources report an internal hostname within a NAT related to the name configured for a compromised system",
             "type": "String"
         },
         "destination.local_ip": {
-            "description": "Some sources report a internal (NATed) IP address related a compromized system. N.B. RFC1918 IPs are OK here.",
+            "description": "Some sources report an internal (NATed) IP address related a compromised system. N.B. RFC1918 IPs are OK here.",
             "type": "IPAddress"
         },
         "destination.network": {
@@ -118,10 +150,6 @@
             "description": "The path portion of an HTTP or related network request.",
             "type": "String"
         },
-        "destination_visible": {
-            "description": "If destination fields are visible.",
-            "type": "Boolean"
-        },
         "event_description.target": {
             "description": "Some sources denominate the target (organization) of a an attack.",
             "type": "String"
@@ -143,6 +171,10 @@
         "extra": {
             "description": "All anecdotal information, which cannot be parsed into the data harmonization elements. E.g. os.name, os.version, etc.  **Note**: this is only intended for mapping any fields which can not map naturally into the data harmonization. It is not intended for extending the data harmonization with your own fields.",
             "type": "JSONDict"
+        },
+        "extra.min_amplification": {
+            "description": "Temporal definition to make sieve work properly",
+            "type": "Float"
         },
         "feed.accuracy": {
             "description": "A float between 0 and 100 that represents how accurate the data in the feed is",
@@ -209,13 +241,29 @@
             "regex": "^[a-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[0-9a-z]{12}$",
             "type": "LowercaseString"
         },
-        "notify": {
-            "description": "If mail will be sent out to affected or responsible contact.",
-            "type": "Boolean"
-        },
         "output": {
             "description": "Event data converted into foreign format, intended to be exported by output plugin.",
             "type": "JSON"
+        },
+        "product.full_name": {
+            "description": "A human readable product name. If a machine-readable format isn't available, this field should be used. It can directly use the version identification strings presented by the product. If not given, a good enough value can usually be constructed by concatenating product.product and product.version, or by consulting external sources such as the CPE Product Dictionary. Example: openssh_/8.9",
+            "type": "String"
+        },
+        "product.name": {
+            "description": "Product name, recommended being as the product in the CPE format. Example: openssh",
+            "type": "LowercaseString"
+        },
+        "product.vendor": {
+            "description": "Vendor name, recommended being as vendor in the CPE format. Example: openbsd",
+            "type": "LowercaseString"
+        },
+        "product.version": {
+            "description": "Product version, recommended being as version in the CPE format. Example: 8.9",
+            "type": "LowercaseString"
+        },
+        "product.vulnerabilities": {
+            "description": "List of vulnerability IDs, separated by semicolons. It's recommended to use a CVE ID where available, and other easily retrievable IDs in other cases, e.g. Github Advisory Database ID. Each vulnerability should only be listed once, and multiple values should be used if there are several different vulnerabilities. However, it's not necessary for a source to list all possible vulnerabilities for a given piece of software. Example: cve-2023-38408;cve-2023-28531;cve-2008-3844;cve-2007-2768",
+            "type": "LowercaseString"
         },
         "protocol.application": {
             "description": "e.g. vnc, ssh, sip, irc, http or smtp.",
@@ -233,29 +281,19 @@
             "description": "The original line of the event from encoded in base64.",
             "type": "Base64"
         },
-        "rtir_incident_id": {
-            "description": "Request Tracker Incident Response incident id.",
-            "type": "Integer"
-        },
-        "rtir_investigation_id": {
-            "description": "Request Tracker Incident Response investigation id.",
-            "type": "Integer"
-        },
-        "rtir_report_id": {
-            "description": "Request Tracker Incident Response incident report id.",
+        "rtir_id": {
+            "description": "Request Tracker Incident Response ticket id.",
             "type": "Integer"
         },
         "screenshot_url": {
             "description": "Some source may report URLs related to a an image generated of a resource without any metadata. Or an URL pointing to resource, which has been rendered into a webshot, e.g. a PNG image and the relevant metadata related to its retrieval/generation.",
             "type": "URL"
         },
-        "sent_at": {
-            "description": "Time when the report has been sent to the responsible recipient.",
-            "type": "DateTime"
-        },
-        "shareable_extra_info": {
-            "description": "Fields from extra which can be shared.",
-            "type": "JSON"
+        "severity": {
+            "description": "Severity of the event, based on the information from the source, and eventually modified by IntelMQ during processing. Meaning of the levels may differ based on the event source. Allowed values: critical (highly critical vulnerabilities being actively exploited and pose a very high likelihood of compromise. For example, RCEs, sensitive data access), high (end of life systems, accessible internal systems that should not be exposed, risk of data leaks, malware drone and sinkhole events), medium (DDoS-amplifiers, unencrypted services requiring login, vulnerabilities requiring MITM to exploit, attacks need prior knowledge), low (deviation from best practice, little to no practical way to exploit, but setup is not ideal), info (informational only, no known risk), undefined (unknown or undetermined)",
+            "length": 10,
+            "regex": "^(critical|high|medium|low|info|undefined)$",
+            "type": "LowercaseString"
         },
         "source.abuse_contact": {
             "description": "Abuse contact for source address. A comma separated list.",
@@ -389,6 +427,10 @@
         }
     },
     "report": {
+        "rtir_report_id": {
+            "description": "Request Tracker Incident Response incident report id. CERT.at-specific",
+            "type": "Integer"
+        },
         "extra": {
             "description": "All anecdotal information of the report, which cannot be parsed into the data harmonization elements. E.g. subject of mails, etc. This is data is not automatically propagated to the events.",
             "type": "JSONDict"
@@ -422,8 +464,8 @@
             "description": "The original raw and unparsed data encoded in base64.",
             "type": "Base64"
         },
-        "rtir_report_id": {
-            "description": "Request Tracker Incident Response incident report id.",
+        "rtir_id": {
+            "description": "Request Tracker Incident Response ticket id.",
             "type": "Integer"
         },
         "time.observation": {
